2011-05-08  Bartosz Kosiorek  <gang65@poczta.onet.pl>

	Fix cursor garbage after suspend/resume for Xserver 1.10 (#405)

	* src/via_video.c: (viaRestoreVideo):

2011-05-04  Bartosz Kosiorek  <gang65@poczta.onet.pl>

	Fix XAA displaying issues

	* src/via_accel.c: (viaInitXAA):

2011-01-23  Bartosz Kosiorek  <gang65@poczta.onet.pl>

	Enable hardware cursor for VX900

	* src/via_cursor.c: (viaHWCursorInit):
	* src/via_mode.c: (ViaModeSet):

2010-12-16  Bartosz Kosiorek  <gang65@poczta.onet.pl>

	Merge vx900_branch - initial VX900 support

	* src/via_accel.c: (viaFlushPCI), (viaDisableVQ),
	(viaInitialize2DEngine), (viaAccelSync), (viaPitchHelper),
	(viaInitXAA):
	* src/via_bandwidth.c: (ViaSetPrimaryFIFO), (ViaSetSecondaryFIFO):
	* src/via_bios.h:
	* src/via_crtc.c: (ViaFirstCRTCSetMode), (ViaSecondCRTCSetMode):
	* src/via_cursor.c: (viaHWCursorInit), (viaCursorStore),
	(viaCursorRestore), (viaShowCursor), (viaHideCursor),
	(viaSetCursorPosition), (viaLoadCursorImage), (viaSetCursorColors):
	* src/via_driver.c: (VIASetupDefaultOptions), (VIAPreInit),
	(VIALeaveVT), (VIASave), (VIARestore), (ViaMMIOEnable),
	(ViaMMIODisable), (VIAMapFB), (VIAWriteMode), (VIACloseScreen):
	* src/via_driver.h:
	* src/via_id.c:
	* src/via_id.h:
	* src/via_mode.c: (ViaDFPDetect), (ViaOutputsDetect),
	(ViaOutputsSelect), (ViaGetMemoryBandwidth), (ViaSetDotclock),
	(ViaModeSet):
	* src/via_mode.h:
	* src/via_panel.c: (ViaPanelScaleDisable), (ViaPanelPreInit),
	(ViaPanelGetSizeFromDDC):
	* src/via_video.c: (DecideOverlaySupport):
	* src/via_xvmc.c: (ViaInitXVMC):

2010-12-15  Bartosz Kosiorek  <gang65@poczta.onet.pl>

	Enable the new mode switch and panel support on K8M800 and VM800 chipsets

	* src/via_driver.c: (VIASetupDefaultOptions), (VIAPreInit):
	* src/via_mode.c: (ViaModeSet):

2010-11-10  Bartosz Kosiorek  <gang65@poczta.onet.pl>

    Replace the deprecated functions 
    xalloc/xrealloc/xfree/xcalloc with 
    malloc/realloc/free/calloc.
    Refer to "/xserver/include/os.h"
