@@ -1,3 +1,9 @@
+2011-05-10  Bartosz Kosiorek  <gang65@poczta.onet.pl>
+
+	Workaround EXA crash with new libcairo2 (#298)
+
+	* src/via_accel.c: (viaExaPrepareComposite):
+
 2011-05-08  Bartosz Kosiorek  <gang65@poczta.onet.pl>
 
 	Fix cursor garbage after suspend/resume for Xserver 1.10 (#405)
